# WPPtools

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  build.bat  setup.iss
app/: CMakeLists.txt  Config.cpp  Config.h  FloatingControl.cpp  FloatingControl.h  FloatingToolbar.cpp  FloatingToolbar.h  KeySimulator.cpp  KeySimulator.h  main.cpp  resources.qrc
docs/: index.html
install/: install_offline.iss  install_online.iss
package/: WPStools.json  install.ps1
panel/: CMakeLists.txt  ConfigPanel.cpp  ConfigPanel.h  PanelMain.cpp  WppConfigPage.cpp  WppConfigPage.h  panel.rc
